--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
+        "test": "vitest",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -11,18 +12,23 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
         "axios": "^0.25",
+        "jsdom": "^21.1.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "ts-loader": "^9.4.2",
-        "typescript": "^4.9.5"
+        "typescript": "^4.9.5",
+        "vitest": "^0.28.5"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@vitejs/plugin-react": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
